rockstar/parser.js
module.exports = // Generated by Peggy 3.0.2.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "\n";
  var peg$c1 = "put";
  var peg$c2 = "into";
  var peg$c3 = "in";
  var peg$c4 = "let";
  var peg$c5 = "be";
  var peg$c6 = "build";
  var peg$c7 = "up";
  var peg$c8 = ",";
  var peg$c9 = "knock";
  var peg$c10 = "down";
  var peg$c11 = "if";
  var peg$c12 = "until";
  var peg$c13 = "while";
  var peg$c14 = "take it to the top";
  var peg$c15 = "continue";
  var peg$c16 = "break it down";
  var peg$c17 = "break";
  var peg$c18 = "minus";
  var peg$c19 = "without";
  var peg$c20 = "plus";
  var peg$c21 = "with";
  var peg$c22 = "times";
  var peg$c23 = "of";
  var peg$c24 = "over";
  var peg$c25 = "between";
  var peg$c26 = "and";
  var peg$c27 = "or";
  var peg$c28 = "nor";
  var peg$c29 = "not";
  var peg$c30 = "taking";
  var peg$c31 = "takes";
  var peg$c32 = "give";
  var peg$c33 = "back";
  var peg$c34 = "ain't";
  var peg$c35 = "is";
  var peg$c36 = "higher";
  var peg$c37 = "greater";
  var peg$c38 = "bigger";
  var peg$c39 = "stronger";
  var peg$c40 = "than";
  var peg$c41 = "lower";
  var peg$c42 = "less";
  var peg$c43 = "smaller";
  var peg$c44 = "weaker";
  var peg$c45 = "as";
  var peg$c46 = "high";
  var peg$c47 = "great";
  var peg$c48 = "big";
  var peg$c49 = "strong";
  var peg$c50 = "low";
  var peg$c51 = "small";
  var peg$c52 = "weak";
  var peg$c53 = "it";
  var peg$c54 = "he";
  var peg$c55 = "she";
  var peg$c56 = "him";
  var peg$c57 = "her";
  var peg$c58 = "they";
  var peg$c59 = "them";
  var peg$c60 = "ze";
  var peg$c61 = "hir";
  var peg$c62 = "zie";
  var peg$c63 = "zir";
  var peg$c64 = "xe";
  var peg$c65 = "xem";
  var peg$c66 = "ve";
  var peg$c67 = "ver";
  var peg$c68 = "says";
  var peg$c69 = "say";
  var peg$c70 = "said";
  var peg$c71 = "right";
  var peg$c72 = "yes";
  var peg$c73 = "ok";
  var peg$c74 = "true";
  var peg$c75 = "wrong";
  var peg$c76 = "no";
  var peg$c77 = "lies";
  var peg$c78 = "false";
  var peg$c79 = "empty";
  var peg$c80 = "silent";
  var peg$c81 = "silence";
  var peg$c82 = ".";
  var peg$c83 = "\"";
  var peg$c84 = "(";
  var peg$c85 = ")";
  var peg$c86 = "null";
  var peg$c87 = "nothing";
  var peg$c88 = "nobody";
  var peg$c89 = "nowhere";
  var peg$c90 = "gone";
  var peg$c91 = "whisper";
  var peg$c92 = "shout";
  var peg$c93 = "scream";
  var peg$c94 = "a";
  var peg$c95 = "an";
  var peg$c96 = "the";
  var peg$c97 = "my";
  var peg$c98 = "your";
  var peg$c99 = "our";
  var peg$c100 = "'s";
  var peg$c101 = "are";
  var peg$c102 = "was";
  var peg$c103 = "were";
  var peg$c104 = "&";
  var peg$c105 = "'n";

  var peg$r0 = /^[ ]/;
  var peg$r1 = /^[A-Z]/;
  var peg$r2 = /^[^\n]/;
  var peg$r3 = /^[a-z\-.]/i;
  var peg$r4 = /^[^ \n]/;
  var peg$r5 = /^[1-9]/;
  var peg$r6 = /^[0-9]/;
  var peg$r7 = /^[^"]/;
  var peg$r8 = /^[^)]/;

  var peg$e0 = peg$literalExpectation("\n", false);
  var peg$e1 = peg$literalExpectation("Put", true);
  var peg$e2 = peg$literalExpectation("into", true);
  var peg$e3 = peg$literalExpectation("in", true);
  var peg$e4 = peg$literalExpectation("Let", true);
  var peg$e5 = peg$literalExpectation("be", true);
  var peg$e6 = peg$literalExpectation("Build", true);
  var peg$e7 = peg$literalExpectation("up", true);
  var peg$e8 = peg$literalExpectation(",", false);
  var peg$e9 = peg$classExpectation([" "], false, false);
  var peg$e10 = peg$literalExpectation("Knock", true);
  var peg$e11 = peg$literalExpectation("down", true);
  var peg$e12 = peg$literalExpectation("If", true);
  var peg$e13 = peg$literalExpectation("Until", true);
  var peg$e14 = peg$literalExpectation("While", true);
  var peg$e15 = peg$literalExpectation("Take it to the top", true);
  var peg$e16 = peg$literalExpectation("continue", true);
  var peg$e17 = peg$literalExpectation("Break it down", true);
  var peg$e18 = peg$literalExpectation("break", true);
  var peg$e19 = peg$literalExpectation("minus", true);
  var peg$e20 = peg$literalExpectation("without", true);
  var peg$e21 = peg$literalExpectation("plus", true);
  var peg$e22 = peg$literalExpectation("with", true);
  var peg$e23 = peg$literalExpectation("times", true);
  var peg$e24 = peg$literalExpectation("of", true);
  var peg$e25 = peg$literalExpectation("over", true);
  var peg$e26 = peg$literalExpectation("between", true);
  var peg$e27 = peg$literalExpectation("and", true);
  var peg$e28 = peg$literalExpectation("or", true);
  var peg$e29 = peg$literalExpectation("nor", true);
  var peg$e30 = peg$literalExpectation("not", true);
  var peg$e31 = peg$literalExpectation("taking", false);
  var peg$e32 = peg$literalExpectation("takes", false);
  var peg$e33 = peg$literalExpectation("Give", true);
  var peg$e34 = peg$literalExpectation("back", true);
  var peg$e35 = peg$literalExpectation("ain't", false);
  var peg$e36 = peg$literalExpectation("is", false);
  var peg$e37 = peg$literalExpectation("not", false);
  var peg$e38 = peg$literalExpectation("higher", false);
  var peg$e39 = peg$literalExpectation("greater", false);
  var peg$e40 = peg$literalExpectation("bigger", false);
  var peg$e41 = peg$literalExpectation("stronger", false);
  var peg$e42 = peg$literalExpectation("than", false);
  var peg$e43 = peg$literalExpectation("lower", false);
  var peg$e44 = peg$literalExpectation("less", false);
  var peg$e45 = peg$literalExpectation("smaller", false);
  var peg$e46 = peg$literalExpectation("weaker", false);
  var peg$e47 = peg$literalExpectation("as", false);
  var peg$e48 = peg$literalExpectation("high", false);
  var peg$e49 = peg$literalExpectation("great", false);
  var peg$e50 = peg$literalExpectation("big", false);
  var peg$e51 = peg$literalExpectation("strong", false);
  var peg$e52 = peg$literalExpectation("low", false);
  var peg$e53 = peg$literalExpectation("small", false);
  var peg$e54 = peg$literalExpectation("weak", false);
  var peg$e55 = peg$literalExpectation("it", false);
  var peg$e56 = peg$literalExpectation("he", false);
  var peg$e57 = peg$literalExpectation("she", false);
  var peg$e58 = peg$literalExpectation("him", false);
  var peg$e59 = peg$literalExpectation("her", false);
  var peg$e60 = peg$literalExpectation("they", false);
  var peg$e61 = peg$literalExpectation("them", false);
  var peg$e62 = peg$literalExpectation("ze", false);
  var peg$e63 = peg$literalExpectation("hir", false);
  var peg$e64 = peg$literalExpectation("zie", false);
  var peg$e65 = peg$literalExpectation("zir", false);
  var peg$e66 = peg$literalExpectation("xe", false);
  var peg$e67 = peg$literalExpectation("xem", false);
  var peg$e68 = peg$literalExpectation("ve", false);
  var peg$e69 = peg$literalExpectation("ver", false);
  var peg$e70 = peg$classExpectation([["A", "Z"]], false, false);
  var peg$e71 = peg$literalExpectation("says", false);
  var peg$e72 = peg$literalExpectation("say", false);
  var peg$e73 = peg$literalExpectation("said", false);
  var peg$e74 = peg$classExpectation(["\n"], true, false);
  var peg$e75 = peg$classExpectation([["a", "z"], "-", "."], false, true);
  var peg$e76 = peg$classExpectation([" ", "\n"], true, false);
  var peg$e77 = peg$literalExpectation("right", false);
  var peg$e78 = peg$literalExpectation("yes", false);
  var peg$e79 = peg$literalExpectation("ok", false);
  var peg$e80 = peg$literalExpectation("true", false);
  var peg$e81 = peg$literalExpectation("wrong", false);
  var peg$e82 = peg$literalExpectation("no", false);
  var peg$e83 = peg$literalExpectation("lies", false);
  var peg$e84 = peg$literalExpectation("false", false);
  var peg$e85 = peg$literalExpectation("empty", false);
  var peg$e86 = peg$literalExpectation("silent", false);
  var peg$e87 = peg$literalExpectation("silence", false);
  var peg$e88 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e89 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e90 = peg$literalExpectation(".", false);
  var peg$e91 = peg$literalExpectation("\"", false);
  var peg$e92 = peg$classExpectation(["\""], true, false);
  var peg$e93 = peg$literalExpectation("(", false);
  var peg$e94 = peg$classExpectation([")"], true, false);
  var peg$e95 = peg$literalExpectation(")", false);
  var peg$e96 = peg$literalExpectation("null", true);
  var peg$e97 = peg$literalExpectation("nothing", true);
  var peg$e98 = peg$literalExpectation("nobody", true);
  var peg$e99 = peg$literalExpectation("nowhere", true);
  var peg$e100 = peg$literalExpectation("gone", true);
  var peg$e101 = peg$literalExpectation("Say", true);
  var peg$e102 = peg$literalExpectation("Whisper", true);
  var peg$e103 = peg$literalExpectation("Shout", true);
  var peg$e104 = peg$literalExpectation("Scream", true);
  var peg$e105 = peg$literalExpectation("if", true);
  var peg$e106 = peg$literalExpectation("taking", true);
  var peg$e107 = peg$literalExpectation("put", true);
  var peg$e108 = peg$literalExpectation("a", true);
  var peg$e109 = peg$literalExpectation("an", true);
  var peg$e110 = peg$literalExpectation("the", true);
  var peg$e111 = peg$literalExpectation("my", true);
  var peg$e112 = peg$literalExpectation("your", true);
  var peg$e113 = peg$literalExpectation("our", true);
  var peg$e114 = peg$literalExpectation("'s", true);
  var peg$e115 = peg$literalExpectation("is", true);
  var peg$e116 = peg$literalExpectation("are", true);
  var peg$e117 = peg$literalExpectation("was", true);
  var peg$e118 = peg$literalExpectation("were", true);
  var peg$e119 = peg$literalExpectation("&", false);
  var peg$e120 = peg$literalExpectation("'n", false);
  var peg$e121 = peg$literalExpectation("and", false);
  var peg$e122 = peg$anyExpectation();

  var peg$f0 = function(statements) { return statements };
  var peg$f1 = function(variable, value) { lastVarParsed = variable; return { type: "variableDeclaration", variable, value } };
  var peg$f2 = function(value, variable) { lastVarParsed = variable; return { type: "variableAssignment", variable, value } };
  var peg$f3 = function(variable, value) { lastVarParsed = variable; return { type: "variableAssignment", variable, value } };
  var peg$f4 = function(variable, amount) { return { type: "incrementVariable", variable, amount: amount.length } };
  var peg$f5 = function(variable, amount) { return { type: "decrementVariable", variable, amount: amount.length } };
  var peg$f6 = function(output) { return { type: "output", output } };
  var peg$f7 = function(expression, scope) { return { type: "if", condition: expression, block: scope } };
  var peg$f8 = function(expression, scope) { return { type: "loop", kind: "until", condition: expression, block: scope } };
  var peg$f9 = function(expression, scope) { return { type: "loop", kind: "while", condition: expression, block: scope } };
  var peg$f10 = function() { return { type: "loopControl", control: "continue" } };
  var peg$f11 = function() { return { type: "loopControl", control: "break" } };
  var peg$f12 = function(a, b) { return { type: "calculation", op: "subtraction", a, b } };
  var peg$f13 = function(a, b) { return { type: "calculation", op: "addition", a, b } };
  var peg$f14 = function(a, b) { return { type: "calculation", op: "times", a, b } };
  var peg$f15 = function(a, b) { return { type: "calculation", op: "division", a, b } };
  var peg$f16 = function(a, b) { return { type: "booleanLogic", op: "and", a, b } };
  var peg$f17 = function(a, b) { return { type: "booleanLogic", op: "or", a, b } };
  var peg$f18 = function(a, b) { return { type: "booleanLogic", op: "nor", a, b } };
  var peg$f19 = function(a) { return { type: "booleanLogic", op: "not", a } };
  var peg$f20 = function(name, parameters) { return { type: "functionCall", name, parameters } };
  var peg$f21 = function(name, parameters, scope) { return { type: "functionDeclaration", name, parameters, scope } };
  var peg$f22 = function(value) { return { type: "return", value } };
  var peg$f23 = function(a, b) { return { type: "comparison", op: "not-equal", a, b } };
  var peg$f24 = function(a, b) { return { type: "comparison", op: "greater", a, b } };
  var peg$f25 = function(a, b) { return { type: "comparison", op: "lesser", a, b } };
  var peg$f26 = function(a, b) { return { type: "comparison", op: "greater-equal", a, b } };
  var peg$f27 = function(a, b) { return { type: "comparison", op: "lesser-equal", a, b } };
  var peg$f28 = function(a, b) { return { type: "comparison", op: "equal", a, b } };
  var peg$f29 = function() {
    return lastVarParsed;
  };
  var peg$f30 = function(a) { return a; };
  var peg$f31 = function(name) { return { type: "SimpleVariable", name };  };
  var peg$f32 = function(a, b) { return [a,b].join("") };
  var peg$f33 = function(name) { return { type: "ProperVariable", name: name.join("") }; };
  var peg$f34 = function(prefix, name) { return { type: "CommonVariable", name: [prefix, name[1]].join(" ") }; };
  var peg$f35 = function(variable, value) { lastVarParsed = variable; return { type: "variableDeclaration", variable, value: { type: "string", value } } };
  var peg$f36 = function(value) { 
    return { 
      type: "number", 
      value: parseFloat(value.reduce(
        (r, e) => r + (e.endsWith(".") ? ("" + (e.length - 1 % 10) + ".") : e.length % 10), 
        ""
      ))
    } 
  };
  var peg$f37 = function(c) { return c };
  var peg$f38 = function() { return "" };
  var peg$f39 = function(v) { return v.join("") };
  var peg$f40 = function() { return { type: "boolean", value: true } };
  var peg$f41 = function() { return { type: "boolean", value: false } };
  var peg$f42 = function() { return { type: "null", value: null } };
  var peg$f43 = function() { return { type: "string", value: "" } };
  var peg$f44 = function(value) { return { type: "number", value: parseFloat(value) } };
  var peg$f45 = function(value) { return { type: "string", value } };
  var peg$f46 = function(content) { return { type: "comment", content } };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseScope();

    return s0;
  }

  function peg$parseScope() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseStatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 10) {
        s3 = peg$c0;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s3 = peg$parseStatement();
        if (s3 === peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$FAILED;
        } else {
          s2 = s3;
        }
      } else {
        s2 = s3;
      }
    }
    if (input.charCodeAt(peg$currPos) === 10) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 === peg$FAILED) {
      s2 = peg$parseEOF();
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatement() {
    var s0;

    s0 = peg$parseAssignment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIncrement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDecrement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseOutput();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIfStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseLoop();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFunctionCall();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseLoopControl();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseFunctionDef();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseReturnValue();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseComment();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseAssignment() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
